# retroquest

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  debug_steps_18_19.py  debug_test.py  package.json  pyproject.toml  retro-quest.py  rooms.py  test_inventory_ui.py
.github/: copilot-instructions.md
.github/prompts/: plan-issue.prompt.md
.github/workflows/: ci.yml  issue-enhancer.lock.yml  issue-enhancer.md
audio/soundeffects/: SoundEffects.py
design/: Act2Design.md  Act2ImplementationPlan.md  Act3Design.md  Act4Design.md  Commands.md  GameOverview.md  GameStory.md  GameStoryFromImplementation.md  RoomsAct1.md  RoomsAct2.md  WebFrontendProposal.md
scripts/: check_line_length.py  check_line_length_filtered.py  deploy.py
src/retroquest/: CommandParser.py  Game.py  GameState.py  Item.py  Quest.py  Room.py  __init__.py  __main__.py
src/retroquest/act1/: Act1.py  Act1StoryFlags.py  __init__.py
src/retroquest/act2/: Act2.py  Act2StoryFlags.py  __init__.py
src/retroquest/act3/: Act3.py  Act3StoryFlags.py  __init__.py
src/retroquest/act4/: Act4.py  Act4StoryFlags.py
src/retroquest/audio/: __init__.py
src/retroquest/characters/: Blacksmith.py  Character.py  Deer.py  Fisherman.py  Grandmother.py  Merchant.py  Mira.py  Priest.py  Shopkeeper.py  Villager.py
src/retroquest/engine/: Act.py  Audio.py  Character.py  CommandParser.py  Game.py  GameState.py  Item.py  Quest.py  Room.py  Spell.py  __init__.py  story_flags.py  theme.py
src/retroquest/items/: AncientAmulet.py  Apple.py  Bread.py  BrokenShovel.py  Bucket.py  Bush.py  Candle.py  Carrot.py  Chicken.py  Coin.py  DullKnife.py  Egg.py  EliorsJournal.py  ExtendedMagneticFishingRod.py  Feather.py  Fish.py  FishingRod.py  HealingHerb.py  HiddenLocket.py  Horseshoe.py  Item.py  Key.py  Knife.py  Lantern.py  Locket.py  Magnet.py  MagneticFishingRod.py  Map.py  Matches.py  Mechanism.py  MillstoneFragment.py  MysteriousBox.py  OldNotice.py  PrayerBook.py  RareFlower.py  River.py  Rope.py  RustyHoe.py  RustySaw.py  SackOfFlour.py  (+14 more)
src/retroquest/quests/: CuriosityKilledTheCat.py  FishingExpedition.py  HintOfMagic.py  KnowYourVillage.py  LetThereBeLight.py  MagicForReal.py  MagnetFishingExpedition.py  OhDeerOhDeer.py  PreparingForTheRoad.py  Quest.py
src/retroquest/rooms/: AbandonedShed.py  BlacksmithsForge.py  Campfire.py  ChickenCoop.py  EliorsCottage.py  ForestPath.py  GeneralStore.py  HiddenGlade.py  MirasHut.py  OldMill.py  Riverbank.py  Room.py  (+5 more)
tests/: __init__.py
tests/retroquest/: __init__.py  test_CommandParser.py  test_Game.py  test_GameState.py  test_Integration.py  test_Room.py  test_room_reachability.py  test_room_transitions.py
tests/web/: test_serve.py
web/: .gitignore  .htaccess  README.md  eslint.config.js  index-vue.html  index.html  package-lock.json  package.json  playwright.config.ts  serve.py  tsconfig.json  vite.config.ts  vitest.config.ts
web/css/: style.css
web/e2e/: debug.spec.ts  game.spec.ts
web/js/: app.js  bridge.js  theme.js
web/public/: manifest.json
web/src/: App.vue
web/vite-plugins/: pythonSourcePlugin.test.ts  pythonSourcePlugin.ts
(+493 files in other folders)
